--- a/service/comment/build.gradle
+++ b/service/comment/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation project(':common:snowflake')
 }
