--- a/service/comment/src/main/resources/application.yml
+++ b/service/comment/src/main/resources/application.yml
@@ -1,2 +1,17 @@
 server:
   port: 9001
+
+spring:
+  application:
+    name: board-article-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3307/comment
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: false
+    hibernate:
+      ddl-auto: none
