--- a/service/article/build.gradle
+++ b/service/article/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation project(':common:snowflake')
+    implementation project(':common:util')
 }
