--- a/service/comment/src/main/resources/application.yml
+++ b/service/comment/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: board-article-service
+    name: board-comment-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3307/comment
