--- a/service/view/src/main/resources/application.yml
+++ b/service/view/src/main/resources/application.yml
@@ -1,2 +1,22 @@
 server:
   port: 9003
+
+spring:
+  application:
+    name: board-view-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3307/article_view
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: false
+    hibernate:
+      ddl-auto: none
+
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
