feat: common > kafka eventPayload & data-serializer

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
     }
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'ch.qos.logback:logback-classic'
 
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
