--- a/service/hot-article/build.gradle
+++ b/service/hot-article/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation project(':common:event')
 }
