--- a/service/hot-article/build.gradle
+++ b/service/hot-article/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation project(':common:event')
+    implementation project(':common:util')
 }
