--- a/service/view/build.gradle
+++ b/service/view/build.gradle
@@ -6,4 +6,6 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation project(':common:snowflake')
     implementation project(':common:util')
+    implementation project(':common:outbox-message-relay')
+    implementation project(':common:event')
 }
